fix(in-app-menu): dynamically reset CSS --menu-bar-height variable to 0px in fullscreen mode to collapse the empty margin left behind by the hidden title bar

--- a/src/plugins/in-app-menu/titlebar.css
+++ b/src/plugins/in-app-menu/titlebar.css
@@ -80,3 +80,9 @@ html {
 ytmusic-browse-response .ytmusic-responsive-list-item-renderer {
   will-change: transform;
 }
+
+@media (display-mode: fullscreen) {
+  :root {
+    --menu-bar-height: 0px !important;
+  }
+}
